2007-04-11  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>:

	* pycvsanaly/main.py:

	Do not use an absolute path for cvsanaly in usage message. 

2007-04-11  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* cvsplugins/graphs/graph_gini.py:

	Do not use an absolute path for running polygini.pl. Fixes bug #255.

2007-04-11  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/FindProgram.py:
	* pycvsanaly/repository.py:
	* pycvsanaly/main.py:

	Look for binaries in PATH instead of using /usr/bin. Path command line
	option has been removed since it's no longer needed. Fixes bug #228.

2007-04-02  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* setup.py: Added polygini.pl as a dependency for all the packages
	(source, debian, etc)
	* pycvsanaly/main.py: Changing version number, as some changes have
	been applied since release 1.0
	
2007-03-28  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* README: Added ploticus as optional dependency in the README file
	* debian/control: Added ploticus as suggested package to be installed
	along with cvsanaly (Debian package version)
	
2007-03-22  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* Release 1.0

2007-01-24  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* graph_utils.py: file removed, no longer needed.
	* repository.py: removed initial & final slash in dir names.
	* main.py: modified usage message with default values.
	* cvsplugin/graphs/graph_activity.py: new graphs added
	* cvsplugin/graphs/graph_heatmaps.py: new graphs added
	* cvsplugin/graphs/graph_inequality.py: new graphs added
	* cvsplugin/graphs/intermediate_tables.py: first_commit function
	* cvsplugin/gluetheos: no needed.

2007-01-23  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* cvsplugins/graphs/graph_gini.py:
	* cvsplugins/graphs/graph_global.py:
	* cvsplugins/graphs/graph_pie.py:
	* cvsplugins/graphs/tables_skeleton.py:

	New grahps added and new way to store directories